# graphframes

./: .gitignore  .mailmap  .pre-commit-config.yaml  .scalafix.conf  .scalafmt.conf  .travis.yml  AGENTS.md  BLOG_POST.md  CNAME  CONTRIBUTING.md  Dockerfile  GraphFrames Demo.ipynb  Makefile  NOTICE  README.md  RESEARCH.md  VERIFICATION.md  WRITING_STYLE.md  buf.gen.yaml  buf.yaml  build.sbt  docker-compose.yml  index.html  publish_for_universe.sh  version.sbt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  python-ci.yml  python-publish.yml  scala-ci.yml  scala-publish.yml
benchmarks/: README.md
connect/src/main/protobuf/: graphframes.proto
core/src/main/scala/org/graphframes/: GraphFrame.scala  Logging.scala  exceptions.scala  mixins.scala
core/src/test/scala/org/graphframes/: GraphFrameSuite.scala  PatternMatchSuite.scala  SparkFunSuite.scala  SparkShimsSuite.scala  TestUtils.scala
dev/: build-docs-in-docker.sh  build-docs.sh  release.py  release_guide.md  run_connect.py  run_doc_benchmarks.py
docs/: Dockerfile  README.md  _config.yml  configurations.md  index.md  motif-tutorial.md  pregel-tutorial.md  quick-start.md  user-guide.md
docs/_layouts/: global.html
docs/_plugins/: copy_api_dirs.rb
docs/_site/: index.html  motif-tutorial.html  quick-start.html  user-guide.html
docs/_site/api/python/: genindex.html  graphframes.examples.html  graphframes.html  graphframes.lib.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_site/api/python/_modules/: index.html
docs/_site/api/python/_modules/graphframes/: graphframe.html
docs/_site/api/python/_static/: documentation_options.js
docs/_site/api/scala/: index.js
docs/_site/api/scala/lib/: template.css  template.js
docs/_site/api/scala/org/: index.html
docs/_site/api/scala/org/graphframes/: GraphFrame$.html  GraphFrame.html  GraphFramesUnreachableException.html  InvalidParseException.html  InvalidPatternException.html  NoSuchVertexException.html  index.html
docs/_site/css/: main.css
docs/mdoc/: 01-installation.md
docs/src/: llms.txt
docs/src/01-about/: 01-index.md  02-architecture.md  03-benchmarks.md  directory.conf
docs/src/02-quick-start/: 01-installation.md  02-quick-start.md  directory.conf
docs/src/03-tutorials/: 01-tutorials.md  02-data-setup.md  02-motif-tutorial.md  03-data-setup.md  03-motif-tutorial.md  03-pregel-tutorial.md  04-neo4j-integration.md  04-pregel-tutorial.md  05-neo4j-tutorial.md  directory.conf
docs/src/04-user-guide/: 01-creating-graphframes.md  02-basic-operations.md  03-centralities.md  03-motif-finding.md  04-motif-finding.md  05-graph-algorithms.md  05-traversals.md  06-graph-clustering.md  07-subgraphs.md  08-saving-and-loading.md  09-aggregate-messages.md  09-configurations.md  10-pregel.md  11-property-graphs.md  12-graphx-conversion.md  13-configurations.md  14-special-columns.md  15-graph-ml.md  directory.conf
docs/src/05-blog/: 01-index.md  1000-graphframes-is-back.md  997-graphframes-011-release.md  998-graphframes-010-release.md  999-graphframes-093-release.md  directory.conf
docs/src/06-contributing/: 01-contributing-guide.md  02-community.md  directory.conf
docs/src/api/: directory.conf
docs/src/helium/: custom.css
gf/: build.sbt
gf/src/main/scala/: GraphFrame.scala  Pattern.scala
gf/src/test/scala/: PatternMatchSuite.scala  PatternSuite.scala
graphframes-connect/src/main/protobuf/: graphframes.proto
graphframes-core/src/main/scala/org/graphframes/: mixins.scala
java/GFJExamples/: pom.xml
java/GFJExamples/src/main/resources/: links.txt  people.txt
project/: LaikaCustomConfig.scala  LaikaCustomDirectives.scala  LaikaCustoms.scala  build.properties  plugins.sbt
python/: .gitignore  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py  tox.ini
python/dev/: build_jar.py  run_connect.py  stop_connect.py
python/dfgraph/: __init__.py  dfgraph.py  tests.py
python/docs/: Makefile  conf.py  dfgraph.rst  epytext.py  graphframes.examples.rst  graphframes.lib.rst  graphframes.rst  index.rst  make2.bat  underscores.py
python/docs/_templates/: layout.html
python/graphframes/: __init__.py  console.py  examples.py  graphframe.py  pregel.py  tests.py
python/graphframes/classic/: graphframe.py  utils.py
python/graphframes/connect/: graphframe_client.py  graphframes_client.py  utils.py
python/graphframes/connect/proto/: graphframes_pb2.py  graphframes_pb2.pyi
python/graphframes/examples/: __init__.py  belief_propagation.py  download.py  graph.py  graphs.py  motif.py  stackexchange.py  utils.py
python/graphframes/internal/: utils.py
python/graphframes/lib/: __init__.py  aggregate_messages.py  louvain.py  pregel.py
python/graphframes/pg/: __init__.py  property_graphframe.py  property_groups.py
python/graphframes/tutorials/: download.py  generate_diagrams.py  img  motif.py  pregel.py  stackexchange.py  utils.py
python/graphframes/tutorials/neo4j/: __init__.py  cli.py  connected_components.py  docker.py  load.py  loaders.py
python/graphframes/tutorials/notebooks/: Network_Motif_Finding.ipynb  Pregel.ipynb
python/tests/: conftest.py  test_graphframes.py  test_neo4j_tutorial.py  tests.py
python/tests/pg/: __init__.py  test_property_graphframe.py
src/main/resources/: log4j.properties
src/main/scala/com/databricks/dfgraph/: DFGraph.scala  DFGraphPythonAPI.scala  EdgeContext.scala  package.scala
src/main/scala/org/graphframes/: EdgeContext.scala  GFImplicits.scala  GraphFrame.scala  GraphFramePythonAPI.scala  LDBCUtils.scala  Logging.scala  Pregel.scala  exceptions.scala  mixins.scala
src/main/scala/org/graphframes/catalyst/: expressions.scala
src/test/resources/: log4j.properties  log4j2.properties
src/test/scala/org/graphframes/: GFImplicitsSuite.scala  GraphFrameSuite.scala  GraphFrameTestSparkContext.scala  PatternMatchSuite.scala  PregelSuite.scala  SparkFunSuite.scala  TestUtils.scala
(+273 files in other folders)
