[project]
name = "graphframes-py"
description = "GraphFrames: Graph Processing Framework for Apache Spark"
authors = [
    { name = "GraphFrames Contributors", email = "graphframes@googlegroups.com" },
]
maintainers = [
    { name = "Russell Jurney", email = "russell.jurney@gmail.com" },
    { name = "Sem", email = "ssinchenko@apache.org" },
    { name = "James Willis", email = "jimwillis95@gmail.com" },
]
license = "Apache 2.0"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = [
    "pyspark",
    "network-analysis",
    "pagerank",
    "pregel",
    "graph",
]
packages = [
    { include = "graphframes" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database :: Front-Ends",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
packages = [
    { include = "graphframes" },
]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
poetry-plugin-export = ">=1.8"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.urls]
"Project Homepage" = "https://graphframes.github.io/graphframes"
"PyPi Homepage" = "https://pypi.org/project/graphframes-py"
"Code Repository" = "https://github.com/graphframes/graphframes"
"Bug Tracker" = "https://github.com/graphframes/graphframes/issues"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.1.1"
isort = "^6.0.0"
pyspark = { version = ">=3.5, <4.1", extras = ["connect"] }
grpcio = "<=1.67.1"
pytest = "^8.3.4"

[tool.poetry.group.tutorials.dependencies]
py7zr = "^0.22.0"
requests = "^2.32.4"
click = "^8.1.8"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1"
setuptools = "*"

[tool.poetry.scripts]
graphframes = "graphframes.console:main"

[tool.black]
line-length = 100
target-version = ["py39"]
include = ["graphframes"]

required-version = "23.12.1"

[tool.isort]
profile = "black"
src_paths = ["graphframes"]

[tool.pytest]
testpaths = [
    "tests"
]
