[metadata]
name = graphframes
version = 0.8.5
description = GraphFrames: Graph Processing Framework for Apache Spark
long_description = file: ../README.md
long_description_content_type = text/markdown
author = GraphFrames Contributors
author_email = graphframes@googlegroups.com
url = https://pypi.org/project/graphframes-py/
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = python
include_package_data = True
install_requires =
    pyspark>=2.0.0
    click==8.1.8
    numpy>=1.7
    py7zr==0.22.0
    requests==2.32.3

[options.packages.find]
where = python
    exclude =
        tests.py
        docs

[options.extras_require]
dev =
    pytest==8.3.4
    Sphinx==8.1.3
    black==25.1.0
    flake8==7.1.1
    isort==6.0.0
    mypy==1.14.1
    pre-commit==3.5.1
